# homelab-autodoist

./: .gitignore  Dockerfile  Jenkinsfile  README.md  autodoist.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py
autodoist/: __init__.py  __main__.py  api.py  config.py  db.py  labeling.py  singleton.py  types.py  webui.py
tests/: __init__.py  test_api.py  test_doing_now_singleton.py  test_focus_singleton.py  test_inbox_contract.py  test_labeling_engine_regressions.py  test_parallel_labeling.py  test_parent_id_handling.py  test_sequential_labeling.py  test_subtask_labeling.py  test_suffix_contract_parity.py  test_webui.py
