[project]
name = "autodoist"
version = "2.0.0"
description = "GTD automation for Todoist: automatic next-action labeling"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Alexander Haselhoff", email = "xela@live.nl" }
]
requires-python = ">=3.9"
dependencies = [
    "todoist-api-python>=3.0.0",
    "requests>=2.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
autodoist = "autodoist.__main__:main"

[project.urls]
Homepage = "https://github.com/Hoffelhas/automation-todoist"
Repository = "https://github.com/Hoffelhas/automation-todoist"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autodoist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
